ajout drag scroll

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     </head>
     <body>
         
@@ -149,48 +148,48 @@
         <div id="scroll_right"><i class="fas fa-angle-right"></i></div>
     </div>
     <div class="scrolling_wrapper_testimonials">
-    <article>
-        <ul>
-            <li><p>Je suis très satisfaite, les prix sont bons par rapport au niveau de qualité des prestations</p></li>
-            <li><p><img class="round" src="images/anais_laurent.jpg" height="60px" alt="Anaïs Laurent"/>Anaïs <span style="text-transform:uppercase">Laurent</span></p></li>
-        </ul>
-    </article>
-    <article>
-        <ul>
-            <li><p>Cela fait 1 an que je suis abonnée chez Fitness Yello. J'apprécie notamment le niveau de service et la qualité des cours, c'est grâce à cette belle équipe que ma motivation remonte à bloc !! Merci à toute la team Fitness Yello 😃</p></li>
-            <li><p><img class="round" src="images/graziella_ricci.jpg" height="60px" alt="Graziella Ricci"/>Graziella <span style="text-transform:uppercase">Ricci</span></p></li>
-        </ul>
-    </article>
-    <article>
-        <ul>
-            <li><p>La salle est propore rien à dire. Les machines et le matériel fitness sont top 👍</p></li>
-            <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
-        </ul>
-    </article>
-    <article>
-        <ul>
-            <li><p>Plus que jamais motivé pour me remettre en forme avec Fitness Yello 💯</p></li>
-            <li><p><img class="round" src="images/laurent_marchand.jpg" height="60px" alt="Laurent Marchand"/>Laurent <span style="text-transform:uppercase">Marchand</span></p></li>
-        </ul>
-    </article>
-    <article>
-        <ul>
-            <li><p>J'ai rarement vu une salle aussi grande, propre et avec autant de matériel disponible pour tout le monde. En effet, il y a peu d'attente pour occuper un emplacement ou une machine !!</p></li>
-            <li><p><img class="round" src="images/julie_bartoli.jpg" height="60px" alt="Julie Traoré"/>Julie <span style="text-transform:uppercase">Bartoli</span></p></li>
-        </ul>
-    </article>
-    <article>
-        <ul>
-            <li><p>J'adore retrouver mes amis après le taf pour faire quelques exercices. Cette salle m'a redonné goût au sport pour un prix compétitif !</p></li>
-            <li><p><img class="round" src="images/damien_traore.jpg" height="60px" alt="Damien Traoré"/>Damien <span style="text-transform:uppercase">Traoré</span></p></li>
-        </ul>
-    </article>
-    <article>
-        <ul>
-            <li><p>Wow ! J'ai énormément progressé en 6 mois et 3 séances assidues par semaine. Je dois une fière chandelle à cette belle équipe très compétente et sympathique 🙂</p></li>
-            <li><p><img class="round" src="images/hamza_achour.jpg" height="60px" alt="Hamza Achour"/>Hamza <span style="text-transform:uppercase">Achour</span></p></li>
-        </ul>
-    </article>
+        <article class="drag">
+            <ul>
+                <li><p>Je suis très satisfaite, les prix sont bons par rapport au niveau de qualité des prestations</p></li>
+                <li><p><img class="round" src="images/anais_laurent.jpg" height="60px" alt="Anaïs Laurent"/>Anaïs <span style="text-transform:uppercase">Laurent</span></p></li>
+            </ul>
+        </article>
+        <article class="drag">
+            <ul>
+                <li><p>Cela fait 1 an que je suis abonnée chez Fitness Yello. J'apprécie notamment le niveau de service et la qualité des cours, c'est grâce à cette belle équipe que ma motivation remonte à bloc !! Merci à toute la team Fitness Yello 😃</p></li>
+                <li><p><img class="round" src="images/graziella_ricci.jpg" height="60px" alt="Graziella Ricci"/>Graziella <span style="text-transform:uppercase">Ricci</span></p></li>
+            </ul>
+        </article>
+        <article class="drag">
+            <ul>
+                <li><p>La salle est propore rien à dire. Les machines et le matériel fitness sont top 👍</p></li>
+                <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
+            </ul>
+        </article>
+        <article class="drag">
+            <ul>
+                <li><p>Plus que jamais motivé pour me remettre en forme avec Fitness Yello 💯</p></li>
+                <li><p><img class="round" src="images/laurent_marchand.jpg" height="60px" alt="Laurent Marchand"/>Laurent <span style="text-transform:uppercase">Marchand</span></p></li>
+            </ul>
+        </article>
+        <article class="drag">
+            <ul>
+                <li><p>J'ai rarement vu une salle aussi grande, propre et avec autant de matériel disponible pour tout le monde. En effet, il y a peu d'attente pour occuper un emplacement ou une machine !!</p></li>
+                <li><p><img class="round" src="images/julie_bartoli.jpg" height="60px" alt="Julie Traoré"/>Julie <span style="text-transform:uppercase">Bartoli</span></p></li>
+            </ul>
+        </article>
+        <article class="drag">
+            <ul>
+                <li><p>J'adore retrouver mes amis après le taf pour faire quelques exercices. Cette salle m'a redonné goût au sport pour un prix compétitif !</p></li>
+                <li><p><img class="round" src="images/damien_traore.jpg" height="60px" alt="Damien Traoré"/>Damien <span style="text-transform:uppercase">Traoré</span></p></li>
+            </ul>
+        </article>
+        <article class="drag">
+            <ul>
+                <li><p>Wow ! J'ai énormément progressé en 6 mois et 3 séances assidues par semaine. Je dois une fière chandelle à cette belle équipe très compétente et sympathique 🙂</p></li>
+                <li><p><img class="round" src="images/hamza_achour.jpg" height="60px" alt="Hamza Achour"/>Hamza <span style="text-transform:uppercase">Achour</span></p></li>
+            </ul>
+        </article>
     </div>
 </div>
 </section>
@@ -368,29 +367,35 @@
 <button class="scrollToTopBtn"><i class="fas fa-chevron-up"></i></button>
 
 <!-- Script -->
-<script>
-/* Fonction scroll gauche/droite */
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="js/jquery.dragscroll.min.js"></script>
+<script type="text/javascript">
+/* Fonction drag scroll */
+$('.drag').dragScroll({
+    direction: 'scrollLeft'
+});
+/* Fonction scroll gauche/droite au clic */
 $('#scroll_left').on('click', function() {
     if (window.matchMedia("(max-width: 767px)").matches) {
         $('.scrolling_wrapper_testimonials').animate({
-        scrollLeft: '-=300'
-        }, 500, 'swing');
+        scrollLeft: '-=100'
+        }, 10, 'swing');
     } else {
         $('.scrolling_wrapper_testimonials').animate({
         scrollLeft: '-=600'
-        }, 500, 'swing');
+        }, 10, 'swing');
     }
 });
 
 $('#scroll_right').on('click', function() {
     if (window.matchMedia("(max-width: 767px").matches){
         $('.scrolling_wrapper_testimonials').animate({
-        scrollLeft: '+=300'
-        }, 500, 'swing');
+        scrollLeft: '+=100'
+        }, 10, 'swing');
     } else {
         $('.scrolling_wrapper_testimonials').animate({
         scrollLeft: '+=600'
-        }, 500, 'swing');
+        }, 10, 'swing');
     }
 });
 
@@ -432,7 +437,6 @@ function burgerMenu() {
     x.style.display = "block";
   }
 }
-
 </script>
 </body>
 </html>
