--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
 <!-- Script -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="js/jquery.dragscroll.min.js"></script>
+<script src="js/jquery.dragscroll.js"></script>
 <script type="text/javascript">
 /* Fonction drag scroll */
 $('.drag').dragScroll({
