changement style CTA

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <div class="useful_margin"> 
     <div>
         <h2>Surpassez vos limites dès maintenant !</h2>
-        <h3>Passez à l'action en profitant de nos offres <br/>taillées selon vos besoins</h3>
+        <h3>Passez à l'action en profitant de nos offres taillées selon vos besoins</h3>
         <button>Inscrivez-vous maintenant !</button>
     </div>
 </div>
